# devsql

./: Cargo.toml
crates/ccql/.github/workflows/: release.yml
crates/devsql/: Cargo.toml
crates/devsql/src/: main.rs
crates/vcsql/.github/workflows/: ci.yml  release.yml
