[package]
name = "devsql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified SQL queries across Claude Code + Git data"
repository = "https://github.com/douglance/devsql"
homepage = "https://github.com/douglance/devsql"
keywords = ["claude", "git", "sql", "productivity", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Workspace crates
ccql = { path = "../ccql", version = "0.2.0" }
vcsql = { path = "../vcsql", version = "0.2.0" }

# SQL engine - SQLite for unified queries
rusqlite.workspace = true

# Git access
git2.workspace = true

# CLI framework
incur = { git = "https://github.com/douglance/incurs", default-features = false, features = ["cli"] }
async-trait = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true

# Utilities
dirs = "5.0"

[[bin]]
name = "devsql"
path = "src/main.rs"

[lib]
name = "devsql"
path = "src/lib.rs"
